fix(styles): add overflow scroll to pre code on mobile

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -94,6 +94,10 @@ pre code {
   @media screen and (prefers-color-scheme: dark) {
       background-color: var(--color-gray-bg-darker);
   }
+
+  @media screen and (max-width: 500px) {
+      overflow: scroll;
+  }
 }
 
 .caption {
